Withdraw Initial UI
Basic Withdraw from wallet UI creation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,9 @@
     <string name="FundWalletBalanceLabel">ACCOUNT BLANCE: </string>
     <string name="FundWalletQRCodeLabel">QR CODE: </string>
 
+    <!-- Withdar Wallet Fragment -->
+    <string name="WithdarWalletBalanceLabel">ACCOUNT BLANCE: </string>
+    <string name="WithdrawWalletTransferLabel">NEW TRANSFER: </string>
+    <string name="QRScannerDescription">QR Code Scanner</string>
+
 </resources>
