Async Task Re-work
-Re-organized Async Tasks into their own classes
-Re-enabled scanner
-Currently using Testnet
-Added loading icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,8 +48,10 @@
     <string name="FundWalletBalanceLabel">ACCOUNT BLANCE: </string>
     <string name="FundWalletQRCodeLabel">QR CODE: </string>
 
-    <!-- Withdar Wallet Fragment -->
-    <string name="WithdarWalletBalanceLabel">ACCOUNT BLANCE: </string>
+    <string name="QRCodeContentDescription">QR Code</string>
+
+    <!-- Withdraw Wallet Fragment -->
+    <string name="WithdrawWalletBalanceLabel">ACCOUNT BALANCE: </string>
     <string name="WithdrawWalletTransferLabel">NEW TRANSFER: </string>
     <string name="QRScannerDescription">QR Code Scanner</string>
 
