License & Agreement + Pending funds notice
-Added user agreement and licenses dialogs
-Added pendings funds notice

-Removed units and network timeout from settings for now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="stopAP">Stop Hotspot</string>
     <string name="startAPText">Start Hotspot</string>
 
+    <!-- Settings Fragment -->
 
     <!-- Welcome Slideshow -->
     <!-- Page 1 -->
